# laion-image-search

./: .gitignore  README.md  package-lock.json
.github/workflows/: cnn-rag.yaml  (+1 more)
cnn-rag/: README.md  data_pipeline.py  pyproject.toml
cnn-rag/data/: cnn_headlines.jsonl
cnn-rag/data/canopy/: cnn_articles_business.jsonl  cnn_articles_entertainment.jsonl  cnn_articles_health.jsonl  cnn_articles_politics.jsonl  cnn_articles_sports.jsonl  cnn_articles_style.jsonl  cnn_articles_travel.jsonl  cnn_articles_us.jsonl  cnn_articles_world.jsonl
image-search-at-scale/: Data_Curation_Examples.ipynb  README.md  dead_links.txt  main.py  package-lock.json  pyproject.toml
image-search-at-scale/React/search-app/: package-lock.json  package.json
image-search-at-scale/React/search-app/public/: index.html  manifest.json
image-search-at-scale/React/search-app/src/: App.css  App.js  DataTable.js  Dropzone.js  ImageFetch.css  ImageFetch.js
image-search-at-scale/React/search-app/src/components/: ImageDisplay.css  ImageDisplay.js  ImageFetch.js  IndexSizeDisplay.js  Search.js  fonts.css
image-search-at-scale/search-app/: package-lock.json  package.json
image-search-at-scale/search-app/public/: index.html
image-search-at-scale/search-app/src/: App.css  App.js  ImageFetch.css  ImageFetch.js  config.json
image-search-at-scale/search-app/src/components/: Dropzone.css  Dropzone.js  ImageContext.js  ImageDisplay.css  ImageDisplay.js  ImageFetch.js  IndexSize.js  QueryTime.js  Search.css  Search.js  config.json
image-search-at-scale/static/: dead_links.txt  index.html  style.css
