[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "image-search-at-scale"
version = "0.1.0"
description = "Simple image search at scale demo for 278M vector Laion dataset"
authors = ["Chris Amata, James Williams"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
transformers = "^4.40.1"
pillow = "^10.3.0"
torch = "^2.6.0"
python-dotenv = "^1.0.1"
pinecone-client = "^4.0.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

